added an onclick function to my timer, acting unexpectedly

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		        <p>Are you ready to begin the quiz?</p>
 		      </div>
 		      <div class="modal-footer">
-		        <button type="button" class="btn btn-success" data-dismiss="modal">Go.</button>
+		        <button type="button" class="btn btn-success" data-dismiss="modal" id="go">Go.</button>
 		        <!-- <button type="button" class="btn btn-primary">Yup!</button> -->
 		      </div>
 		    </div>
@@ -261,7 +261,7 @@
 				<!-- <p>Name: </p>          
 				<input type="text" name="name" id="txtFirstName"/><br>
 				Your Name is: <label id="lblFirstName"></label> <br> -->
-				<button type="submit" name="submit" class="submit btn btn-primary btn-lg" id="submitModal" data-toggle="modal" data-target="#submitModal">Submit!</button>
+				<button type="submit" name="submit" class="submit btn btn-primary btn-lg" id="submitButton" data-toggle="modal" data-target="#submitModal">Submit!</button>
 
 				<!-- Submit Button Modal -->
 				<div class="modal fade" id="submitModal" tabindex="-1" role="dialog" aria-labelledby="submitModalLabel">
