--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
 				        <p>{{Put the score here}}</p>
 				      </div>
 				      <div class="modal-footer">
-				        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				        <button type="button" class="btn btn-primary">Save changes</button>
+				        <button type="button" class="btn btn-default" data-dismiss="modal" id="ok">Okay!</button>
+				        <button type="button" class="btn btn-primary" id="tryAgain">Try Again</button>
 				      </div>
 				    </div>
 				  </div>
