--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		        <h2 class="modal-title" id="myModalLabel">JavaScript Trivia</h2>
 		      </div>
 		      <div class="modal-body">
-		        <p>Are you ready to begin the quiz?</p>
+		        <p id="modal-para">Are you ready to begin the quiz?</p>
 		      </div>
 		      <div class="modal-footer">
 		        <button type="button" class="btn btn-success" data-dismiss="modal" id="go">Go.</button>
