--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
 					    <div class="testQuestions">
 							<div class="actual-questions">
 							  <label class="question-text" for="q1-1">
-							  	<input type="radio" name="creator" value="Steve Jobs" id="q1-1" class="answers" > <i></i> Steve Jobs
+							  	<input type="radio" name="creator" value="Steve Jobs" id="q1-1" class="answers" > A. Steve Jobs
 							  </label> &nbsp;
 							</div>  
 							<div class="actual-questions">
 								<label class="question-text" for="q1-2">
-								  <input type="radio" name="creator" value="Brandan Eich" id="q1-2" class="answers cor" id="tester" onclick="test()"><i></i> Brandan Eich
+								  <input type="radio" name="creator" value="Brandan Eich" id="q1-2" class="answers cor" id="tester" onclick="test()"> B. Brandan Eich
 								</label> &nbsp;
 							</div> 
 							<div class="actual-questions">
 								<label class="question-text" for="q1-3">
-							  		<input type="radio" name="creator" value="Bill Gates" id="q1-3" class="answers"><i></i>  Bill Gates &nbsp;
+							  		<input type="radio" name="creator" value="Bill Gates" id="q1-3" class="answers"> C. Bill Gates &nbsp;
 								</label>
 							</div> 
 							<div class="actual-questions">  
 								<label class="question-text" for="q1-4">
-							  		<input type="radio" name="creator" value="Jesse Eisenberg" id="q1-4" class="answers"><i></i> Jesse Eisenberg 
+							  		<input type="radio" name="creator" value="Jesse Eisenberg" id="q1-4" class="answers"> D. Jesse Eisenberg 
 								</label>
 						  	</div>
 						</div><br>
@@ -76,22 +76,22 @@
 						<div class="testQuestions">
 							<div class="actual-questions"> 
 								<label class="question-text" for="q2-1">
-								  <input type="radio" name="name_value" value="LiveScript" id="q2-1" class="answers cor"> LiveScript &nbsp;
+								  <input type="radio" name="name_value" value="LiveScript" id="q2-1" class="answers cor"> A. LiveScript &nbsp;
 								</label>
 							</div>
 							<div class="actual-questions">
 								<label class="question-text" for="q2-2">   
-								  <input type="radio" name="name_value" value="ActionScript" id="q2-2" class="answers"> ActionScript &nbsp;
+								  <input type="radio" name="name_value" value="ActionScript" id="q2-2" class="answers"> B. ActionScript &nbsp;
 								</label>
 							</div>  
 							<div class="actual-questions"> 
 								<label class="question-text" for="q2-3">
-								  <input type="radio" name="name_value" value="Hypertext Preprocessor" id="q2-3" class="answers"> Hypertext Preprocessor &nbsp;
+								  <input type="radio" name="name_value" value="Hypertext Preprocessor" id="q2-3" class="answers"> C. Hypertext Preprocessor &nbsp;
 								</label>
 							</div>
 							<div class="actual-questions">   
 								<label class="question-text" for="q2-4">  
-								  <input type="radio" name="name_value" value="C#" id="q2-4"class="answers"> C#
+								  <input type="radio" name="name_value" value="C#" id="q2-4"class="answers"> D. C#
 								</label>
 							</div>  
 						</div><br>
@@ -100,22 +100,22 @@
 						<div class="testQuestions">
 							<div class="actual-questions">
 								<label for="q3-1" class="question-text"> 
-								  <input type="radio" name="language" value="A derivative of Spanish" id="q3-1" class="answers"> A derivative of Spanish &nbsp;
+								  <input type="radio" name="language" value="A derivative of Spanish" id="q3-1" class="answers"> A. A derivative of Spanish &nbsp;
 								</label>
 							</div>
 							<div class="actual-questions"> 
 								<label for="q3-2" class="question-text">  
-								  <input type="radio" name="language" value="Machine" id="q3-2"class="answers"> Machine Language &nbsp;
+								  <input type="radio" name="language" value="Machine" id="q3-2"class="answers"> B. Machine Language &nbsp;
 								</label>
 							</div>  
 							<div class="actual-questions"> 
 								<label for="q3-3" class="question-text">  
-								  <input type="radio" name="language" value="Scripting" id="q3-3" class="answers cor"> Scripting language&nbsp;
+								  <input type="radio" name="language" value="Scripting" id="q3-3" class="answers cor"> C. Scripting language&nbsp;
 								</label>
 							</div> 
 							<div class="actual-questions">  
 								<label for="q3-4" class="question-text">  
-								  <input type="radio" name="language" value="MarkUp Language" id="q3-4" class="answers"> MarkUp Language
+								  <input type="radio" name="language" value="MarkUp Language" id="q3-4" class="answers"> D. MarkUp Language
 								</label>
 							</div>  
 						</div><br>
@@ -124,12 +124,12 @@
 					<div class="testQuestions">
 						<div class="actual-questions"> 
 							<label for="q4-1" class="question-text">
-							  <input type="radio" name="T or F1" value="true" id="q4-1" class="answers"> True &nbsp;
+							  <input type="radio" name="T or F1" value="true" id="q4-1" class="answers"> A. True &nbsp;
 							</label>
 						</div>
 						<div class="actual-questions">
 							<label for="q4-2" class="question-text">   
-							  <input type="radio" name="T or F1" value="false" id="q4-2" class="cor answers"> False
+							  <input type="radio" name="T or F1" value="false" id="q4-2" class="cor answers"> B. False
 							</label>
 						</div>  
 					</div><br>	  
@@ -138,12 +138,12 @@
 					<div class="testQuestions">
 						<div class="actual-questions">
 							<label for="q5-1" class="question-text"> 
-							  <input type="radio" name="T or F2" value="true" id="q5-1" class="cor answers"> True &nbsp;
+							  <input type="radio" name="T or F2" value="true" id="q5-1" class="cor answers"> A. True &nbsp;
 							</label>
 						</div>  
 						<div class="actual-questions"> 
 							<label for="q5-2" class="question-text">
-							  <input type="radio" name="T or F2" value="false" id="q5-2" class="answers"> False
+							  <input type="radio" name="T or F2" value="false" id="q5-2" class="answers"> B. False
 							</label>
 						</div>  
 					</div><br>
@@ -152,22 +152,22 @@
 						<div class="testQuestions">
 							<div class="actual-questions"> 
 								<label for="q6-1" class="question-text">
-								  <input type="radio" name="browser" value="Google Chrome" id="q6-1" class="answers">  Google Chrome &nbsp;
+								  <input type="radio" name="browser" value="Google Chrome" id="q6-1" class="answers"> A. Google Chrome &nbsp;
 								<label>
 							</div>
 							<div class="actual-questions"> 
 								<label for="q6-2" class="question-text">  
-								  <input type="radio" name="browser" value="Opera" id="q6-2"class="answers"> Opera &nbsp;	
+								  <input type="radio" name="browser" value="Opera" id="q6-2"class="answers"> B. Opera &nbsp;	
 								</label>				
 							</div>  
 							<div class="actual-questions"> 
 								<label for="q6-3" class="question-text">
-								  <input type="radio" name="browser" value="Firefox" id="q6-3" class="answers"> Firefox &nbsp;
+								  <input type="radio" name="browser" value="Firefox" id="q6-3" class="answers"> C. Firefox &nbsp;
 								</label>
 							</div> 
 							<div class="actual-questions">
 								<label for="q6-4" class="question-text">  
-								  <input type="radio" name="browser" value="Netscape Navigator" id="q6-4" class="answers cor"> Netscape Navigator
+								  <input type="radio" name="browser" value="Netscape Navigator" id="q6-4" class="answers cor"> D. Netscape Navigator
 								</label>
 							</div>   
 						</div><br>
@@ -176,22 +176,22 @@
 						<div class="testQuestions">
 							<div class="actual-questions"> 
 								<label for="q7-1" class="question-text">
-								  <input type="radio" name="antivirus" value="Oracle" id="q7-1" class="answers cor" > Oracle &nbsp;
+								  <input type="radio" name="antivirus" value="Oracle" id="q7-1" class="answers cor" > A. Oracle &nbsp;
 								</label>
 							</div>
 							<div class="actual-questions">
 								<label for="q7-2" class="question-text">   
-								  <input type="radio" name="antivirus" value="Mozilla" id="q7-2" class="answers"> Mozilla &nbsp;
+								  <input type="radio" name="antivirus" value="Mozilla" id="q7-2" class="answers"> B. Mozilla &nbsp;
 								</label>				
 							</div> 
 							<div class="actual-questions">
 							<label for="q7-3" class="question-text">  	 
-								  <input type="radio" name="antivirus" value="Apple" id="q7-3" class="answers"> Apple &nbsp;
+								  <input type="radio" name="antivirus" value="Apple" id="q7-3" class="answers"> C. Apple &nbsp;
 								</label>
 							</div> 
 							<div class="actual-questions"> 
 								<label for="q7-4" class="question-text"> 
-								  <input type="radio" name="antivirus" value="McAfee Antivirus" id="q7-4" class="answers"> McAfee Antivirus
+								  <input type="radio" name="antivirus" value="McAfee Antivirus" id="q7-4" class="answers"> D. McAfee Antivirus
 								</label>
 							</div>  
 						</div><br>
@@ -200,22 +200,22 @@
 						<div class="testQuestions">
 							<div class="actual-questions"> 
 								<label for="q8-1" class="question-text">
-								  <input type="radio" name="JSON" value="Douglas Crockford" id="q8-1" class="answers cor"> Douglas Crockford &nbsp;
+								  <input type="radio" name="JSON" value="Douglas Crockford" id="q8-1" class="answers cor"> A. Douglas Crockford &nbsp;
 								</label>
 							</div>  
 							<div class="actual-questions">
 							<label for="q8-2" class="question-text"> 
-								  <input type="radio" name="JSON" value="Edward Mozilla" id="q8-2" class="answers"> Edward Mozilla &nbsp;
+								  <input type="radio" name="JSON" value="Edward Mozilla" id="q8-2" class="answers"> B. Edward Mozilla &nbsp;
 								</label>
 							</div>  
 							<div class="actual-questions">
 								<label q8-1="q8-3" class="question-text"> 
-								  <input type="radio" name="JSON" value="Elon Musk" id="q8-3" class="answers"> Elon Musk &nbsp;
+								  <input type="radio" name="JSON" value="Elon Musk" id="q8-3" class="answers"> C. Elon Musk &nbsp;
 								</label>				
 							</div>
 							<div class="actual-questions"> 
 								<label for="q8-4" class="question-text">  
-								  <input type="radio" name="JSON" value="Grace Hopper" id="q8-4" class="answers"> Grace Hopper
+								  <input type="radio" name="JSON" value="Grace Hopper" id="q8-4" class="answers"> D. Grace Hopper
 								</label>
 							</div>  
 						</div><br>
@@ -224,36 +224,36 @@
 						<div class="testQuestions">
 							<div class="actual-questions">
 								<label for="q9-1" class="question-text"> 
-								  <input type="radio" name="guru" value="Mike Meyers" id="q9-1" class="answers"> Mike Meyers &nbsp;
+								  <input type="radio" name="guru" value="Mike Meyers" id="q9-1" class="answers"> A. Mike Meyers &nbsp;
 								</label>
 							</div> 
 							<div class="actual-questions">  
 								<label for="q9-2" class="question-text">
-								  <input type="radio" name="guru" value="John Resig" id="q9-2" class="cor answers"> John Resig &nbsp;
+								  <input type="radio" name="guru" value="John Resig" id="q9-2" class="cor answers"> B. John Resig &nbsp;
 								</label>
 							</div>  
 							<div class="actual-questions"> 
 								<label for="q9-3" class="question-text">
-								  <input type="radio" name="guru" value="John Carmack" id="q9-3" class="answers"> John Carmack &nbsp;
+								  <input type="radio" name="guru" value="John Carmack" id="q9-3" class="answers"> C. John Carmack &nbsp;
 								</label>
 							</div>
 							<div class="actual-questions">  
 								<label for="q9-4" class="question-text"> 
-								  <input type="radio" name="guru" value="Steve Wazniak" id="q9-4" class="answers"> Steve Wazniak
+								  <input type="radio" name="guru" value="Steve Wazniak" id="q9-4" class="answers"> D. Steve Wazniak
 								</label>
 							</div>  
-						</div>
+						</div><br>
 					<li>10. The term 'bug' came from Grace Hopper an early software engineer where an actual moth was pulled out of an early electromechanical computer.</li>
 					<!-- true -->
 					<div class="testQuestions">
 						<div class="actual-questions"> 
 							<label for="q10-1" class="question-text">
-							  <input type="radio" name="T or F3" value="true" id="q10-1" class="cor answers"> True &nbsp;
+							  <input type="radio" name="T or F3" value="true" id="q10-1" class="cor answers"> A. True &nbsp;
 							</label>
 						</div>  
 						<div class="actual-questions"> 
 							<label for="q10-2" class="question-text">
-							  <input type="radio" name="T or F3" value="false" id="q10-2" class="answers"> False
+							  <input type="radio" name="T or F3" value="false" id="q10-2" class="answers"> B. False
 							</label>
 						</div>  
 					</div>
@@ -273,7 +273,7 @@
 				      </div>
 				      <div class="modal-body">
 				        <p>You have finished the quiz!</p>
-				        <p>{{Put the score here}}</p>
+				        <p class="finalScore"><!--Scre here--></p>
 				      </div>
 				      <div class="modal-footer">
 				        <button type="button" class="btn btn-default" data-dismiss="modal" id="ok">Okay!</button>
