--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 				      </div>
 				      <div class="modal-body">
 				        <p>You have finished the quiz!</p>
-				        <p class="finalScore"><!--Scre here--></p>
+				        <p class="finalScore"><!--Score here--></p>
 				      </div>
 				      <div class="modal-footer">
 				        <button type="button" class="btn btn-default" data-dismiss="modal" id="ok">Okay!</button>
