still looking for solutions

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							</div>  
 							<div class="actual-questions">
 								<label class="question-text" for="q1-2">
-								  <input type="radio" name="creator" value="Brandan Eich" id="q1-2" class="answers cor" id="tester" onclick="test()"> B. Brandan Eich
+								  <input type="radio" name="creator" value="Brandan Eich" id="q1-2" class="answers cor"> B. Brandan Eich
 								</label> &nbsp;
 							</div> 
 							<div class="actual-questions">
